fix unreachable menu items on mobile

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -321,6 +321,8 @@ $header-border: 1px solid transparentize(black, 0.8);
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  max-height: 100vh;
+  overflow-y: auto;
   position: sticky;
   top: 0;
   z-index: 2;
@@ -339,6 +341,7 @@ $header-border: 1px solid transparentize(black, 0.8);
   @media (min-width: $brk--phone) {
     align-items: stretch;
     justify-content: flex-start;
+    overflow-y: visible;
   }
 }
 
